# ShipShift

./: .gitignore  CMakeLists.txt  README.md
TMP_BUILD_LINUX/: CMakeLists.txt
cmake/modules/: FindThor.cmake
scripts/: run
src/: CMakeLists.txt  animatedsprite.cpp  animatedsprite.h  animation.cpp  animation.h  boid.cpp  boid.h  circleprojectile.cpp  circleprojectile.h  circleship.cpp  circleship.h  cluster.cpp  cluster.h  guidedprojectile.cpp  guidedprojectile.h  input.cpp  input.h  largecluster.cpp  largecluster.h  largeenemy.cpp  largeenemy.h  laserprojectile.cpp  laserprojectile.h  main.cpp  mediumcluster.cpp  mediumcluster.h  mediumenemy.cpp  mediumenemy.h  player.cpp  player.h  projectile.cpp  projectile.h  rectangleship.cpp  rectangleship.h  scene.cpp  scene.h  ship.cpp  ship.h  smallcluster.cpp  smallcluster.h  (+12 more)
